# ngin2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
editor/: CMakeLists.txt
editor/src/: dashboard_theme.cpp  dashboard_theme.h  editor.cpp  editor.h  engine_viewport.cpp  engine_viewport.h  file_dialog.cpp  file_dialog.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h  main.cpp  new_project_dialog.cpp  new_project_dialog.h  opengl_context_qt.cpp  project_launcher_window.cpp  project_launcher_window.h  project_panel.cpp  project_panel.h  qt_input_adapter.cpp  qt_input_adapter.h  qt_path_utils.h
engine/: CMakeLists.txt
engine/assets/shaders/: circle.frag  circle.vert  quad.frag  quad.vert  triangle.frag  triangle.vert
engine/src/: Transform.cpp  Transform.h  application.cpp  application.h  camera.cpp  camera.h  engine.h  event.h  event_queue.cpp  event_queue.h  input.cpp  input.h  key_codes.h  opengl_context.cpp  transform.cpp  transform.h  window.cpp  window.h
engine/src/core/: assert.h  build_config.h  core.h  filesystem.cpp  filesystem.h  log.cpp  log.h  platform_detection.h  types.h
engine/src/graphics/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.cpp  graphics_pipeline.h  index_buffer.cpp  index_buffer.h  opengl_context.cpp  opengl_context.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h  vertex_buffer.cpp  vertex_buffer.h
engine/src/project/: project.cpp  project.h  project_serializer.cpp  project_serializer.h
engine/src/scene/: entity.cpp  entity.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h
engine/src/scene/components/: components.h  id_component.h  sprite_component.h  tag_component.h  transform_component.h
runtime/: CMakeLists.txt
runtime/assets/shaders/: triangle.frag  triangle.vert
runtime/src/: application.cpp  application.h  main.cpp  runtime_application.cpp  runtime_application.h
